# ChangeLog for sys-kernel/linux-desktop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*linux-desktop-2.6.31.7 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +linux-desktop-2.6.31.7.ebuild, +metadata.xml:
  Add binary kernel for desktop.
