@@ -1,4 +1,4 @@
 DIST linux-desktop-i686-2.6.31.7.tar.bz2 19719354 RMD160 1c9531ab94c97e41da4ce6c8847b830c32263e31 SHA1 0e035db9c69f8639c11ae2b8ebfabb852af6ec33 SHA256 f051a67152c2fd83f1463bec1c5cb06cdab1d3d582f227cbcd2310132bd9e181
-EBUILD linux-desktop-2.6.31.7.ebuild 1672 RMD160 e894ab09ce687cb7a2990beed1df68c0dc79a304 SHA1 645df5b47fdcf732b87b2a5f6702b4120c6093f8 SHA256 0a639ac676e383a1530760bb41244bf424ecba4486a11b02b6f5dee2a6f31651
-MISC ChangeLog 307 RMD160 9f9a5a652d17089ff82e3dbda3e4a58e790540c5 SHA1 977fcbc7a3e3f99f02560ed62547459fbffac92b SHA256 97736af78c8f86a5e6517a318503b529140136c7b9b68fc0dbf941377bebec31
+EBUILD linux-desktop-2.6.31.7.ebuild 1957 RMD160 ee55f49b6c62febdf98898f76a835b296ddb9e65 SHA1 36681e28053fa36965482ed3a58d6c5db722ddd9 SHA256 5f56e353d8a99bf0ad122b1f8a007097705f183ca956fabcd27b393ad8788a63
+MISC ChangeLog 438 RMD160 14d3ecc39e03397ddec05b7eb76c901758f3aa32 SHA1 3f66f71ae244e30e69ed273fece6228c1140dc63 SHA256 f45966bf552f3c5bb69449167314bafb281b5fc6cf426d0aea1ab7851ebadc48
 MISC metadata.xml 301 RMD160 02bb86eab6405a3ef4c456cb74a1e75af6aa5908 SHA1 b175ee74e8df391d076f7eb5938f56a3b145ba14 SHA256 85b67abd7fbdbaf56de54b4d63580250b6f7ea0cfda624072a7601ee6d25ffd2
