@@ -1,4 +1,4 @@
 DIST linux-server-i686-2.6.31.7.tar.bz2 19745967 RMD160 859a42ff21742a5df2783dba4f67b4b5936db4d9 SHA1 7d890f4d003e0307cdeac7d244f3696ea56f344d SHA256 b5513bb8f6ad5fce504073158004986d2708528a5c13ae761ca15921ae909b6b
-EBUILD linux-server-2.6.31.7.ebuild 1672 RMD160 e894ab09ce687cb7a2990beed1df68c0dc79a304 SHA1 645df5b47fdcf732b87b2a5f6702b4120c6093f8 SHA256 0a639ac676e383a1530760bb41244bf424ecba4486a11b02b6f5dee2a6f31651
-MISC ChangeLog 304 RMD160 4dcd89c93677758d676c5d71f705bac40021ca69 SHA1 c53b12fe01121edcc6cf1756284b4d3d48afb62e SHA256 0173bab2ceddf2fcb941c66b9c750d9359a954db0aeb9693620851dcaa62cf3d
+EBUILD linux-server-2.6.31.7.ebuild 1956 RMD160 be0277254935ce3881ad0db7f9eca5bd5619d518 SHA1 2e409167ac07d2d016787da4458898faff2da393 SHA256 5b38af0333211b8a07c6f8a0d86d7d720b0d5f3ba345c3663e8188828b009361
+MISC ChangeLog 434 RMD160 36ce8852efe13c558c364c0e2226d415b092d20a SHA1 553fc53f5a0a418a661ca31c03ffecfc87111bfb SHA256 d1c6409cd5ca84d48bc89449598ca4ea27e88edfc1373648f2ff09f0c87e5e0a
 MISC metadata.xml 288 RMD160 5fd5b532cfce86a2e9a2a8b6ed45d37b50e35cbc SHA1 2cce1a3a0269f00995b3021bb73e27ded1de11e7 SHA256 876cd412c7719fddeb9a0e9c39179fe240cfa198f9db5db3b599e23f644b2459
