@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  linux-server-2.6.31.7.ebuild:
+  Added modification kernel sources.
+
 *linux-desktop-2.6.31.7 (11 Dec 2009)
 
   11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
